# frep

./: .gitignore
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/simple/: CMakeLists.txt  aspect_ratio.h  depth_camera.cpp  frepup-shaders.cpp  frepup-shaders.h  frepup-simple.cpp
src/simple/composites/: blend_periodic.txt  blending_functions_list.txt  blobs_blend.txt  blobs_blend_periodic.txt  blobs_blend_sub.txt  blobs_cyl_blend_sub.txt  blobs_cyl_blend_union.txt  composite_color.txt  composite_color_blended.txt  composite_color_blended2.txt  composite_color_blended3.txt  composite_color_blended_wireframe.txt  deform3.txt  deform5.txt  deform_blend3.txt  displace_color.txt  displace_color_depth.txt  displacement.txt  displacement_composite.txt  displacement_curve.txt  displacement_etching.txt  morph.txt  passthrough.txt  ssao_simple.frag.txt  ssao_trace_per_frag2_optimal.frag.txt  subtract.txt  subtract3.txt  subtract_blend.txt  subtract_blend3.txt  subtract_blend4.txt  subtract_blend_smooth.txt  subtract_no_blend.txt  subtract_no_blend_tweaked.txt  sum_blend10.txt  sum_blend3.txt  sum_blend4.txt  union.txt  union_blend.txt  union_blend3.txt
src/simple/materials/: blue_plastic.txt  green_plastic.txt  passthrough_color.txt  phong_color.txt  red_plastic - Copy.txt  red_plastic.txt  ssao_simple.frag.txt  ssao_trace_per_frag2_optimal.frag.txt
src/simple/objects/: cone.txt  frep-composite.txt  frep-primitives.txt
src/simple/primitives/: blob.txt  blob2.txt  box.txt  cylinder.txt  funtorus.txt  helix.txt  julia.txt  mandelbulb.txt  paraboloid.txt  piecewise_avg_distance.txt  piecewise_distance.txt  piecewise_distance_blended.txt  piecewise_plane_distance_blended.txt  piecewise_points_distance_blended.txt  piecewise_points_distance_blended2.txt  piecewise_points_multiply.txt  rbf1.txt  rbf2.txt  rbf3.txt  sphere.txt  thick_sphere_surface.txt  xplane.txt
src/simple/scenes/: ball_and_four_boxes.txt  blobs_cylinder.txt  blobs_funtorus.txt  box.txt  box_mandelbulb.txt  box_piecewise_blended.txt  box_sphere.txt  cone.txt  cone_sphere.txt  cone_two_spheres.txt  cylinder.txt  cylinder_and_four_rbf2.txt  cylinder_sphere.txt  cylinder_two_rbf.txt  cylinder_two_spheres.txt  cylinder_two_spheres_box.txt  four_rbf3.txt  fourblobs.txt  mandelbulb.txt  mandelbulb_fourblobs.txt  paraboloid.txt  piecewise_dist.txt  piecewise_dist_blended.txt  piecewise_plane_dist_blended.txt  piecewise_points_dist_blended.txt  sphere.txt  sphere_and_four_rbf2.txt  sphere_helix.txt  sphere_sphere.txt  sphere_two_rbf.txt  ten_rbf3.txt  thick_sphere.txt  threeblobs.txt  torus.txt
src/simple/shaders/: iso.vert  passthrough.vert  traceandshade_all.frag  traceandshade_bbox_autocompute.frag  traceandshade_bbox_autocompute_regula_falsi.frag  traceandshade_external_intersection.frag  traceandshade_grad_noshade .frag  traceandshade_nograd.frag
src/simple/test/: blobs_cylinder_blended_subtracted .bat  blobs_cylinder_blended_subtracted.bat  blobs_funtorus_blended_subtracted.bat  blobs_torus_blended.bat  deform3.bat  deform5.bat  deform_blend3.bat  displace.bat  displace_composite.bat  displace_composite_ssao.bat  displace_curve.bat  displace_etching.bat  displace_ssao.bat  morph.bat  passthrough.bat  (+20 more)
(+24 files in other folders)
